          back to default, causing failure of a basic read if the I2C bus hadn't
          been reset before another t/65-i2c.t test run (removed workaround from
          the test as well)
        - bump ver of RPi::WiringPi::Constant prereq after adding ALT mode tag
        - bump ver of WiringPi::API to 2.36.12 due to updates in that module
        - bump ver of RPi::Pin to 2.3602

2.3615  2017-06-22
        - fixed issues with specific pins in test diagram for DAC (closes #29)
          (closes #30)
        - added more code to t/55-dac.t. We now thoroughly test both onboard
          DACs. Updated diagram (closes #33)
        - updated interrupt tests to conform to set_interrupt() as opposed to
          the old interrupt_set()
        - send in model => MCP4922 by default in dac() if it's not sent in, and
          update docs accordingly (closes #31)
        - moved the removal of the pin env var to outside of the for() loop in
          Util::cleanup (closes #32)
        - added Perlbrew install instructions into the SETUP section of FAQ
        - removed erroneous LWP::Simple use statement in t/60-lcd.t that was
          breaking tests
        - sudo run t/40-interrupt_and_pwd.t were setting PI_BOARD recklessly,
          breaking the tests within if we're not set up correctly. Same with
          t/15-pwm.t
        - minor code cleanup/tidying

2.3614  2017-05-27
        - added GPSD::Parse support via gps()
        - removed all traces of software PWM (closes #7)
        - added a note in FAQ that explains that sudo is not required unless
          using PWM features (closes #26)
        - removed standalone Interrupt object code and documentation
          (Interrupt.pm)
        - removed RPi::WiringPi::Pin, and made it standalone. We now require
          RPi::Pin external distribution instead (closes #25)

2.3613  2017-05-09
        - added Test::BrewBuild auto testing instructions in the FAQ