@@ -16,6 +16,7 @@ lib/RPi/WiringPi/Util.pm
 Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
+mode.pl
 README
 t/00-load.t
 t/01-setup.t
@@ -33,6 +34,7 @@ t/45-shift_reg_adc.t
 t/55-dac.t
 t/60-lcd.t
 t/65-i2c.t
+t/70-alt_modes.t
 t/manifest.t
 t/pod-coverage.t
 t/README
